test(phase4): harden service descriptor scanning